Fixed location error causing server crash. and fixed the name overlapping on url details

--- a/public/css/urldetails.css
+++ b/public/css/urldetails.css
@@ -145,15 +145,15 @@ body{
 }
 
 #URLname{
-    width: 5vw;
+    width: 2vw;
 }
 
 #longURL{
-    width: 10vw;
+    width: 5vw;
 }
 
 #URLID{
-    width: 10vw;
+    width: 15vw;
 }
 
 #Device{
